--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>I am in love with you by marvelous</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="/IMG-20211204-WA0012.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="/marvelous_sorrow_heart.jpeg" type="image/x-icon">
     <link rel="stylesheet" href="sass/style.css">
 </head>
 
